objects/HCP_Enrollment__c.object
<CustomObject>
    <description>HCP Enrollment</description>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>HCP Enrollments</relationshipLabel>
        <relationshipName>HCP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Orientation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>did the HCP complete orientation for this study?</inlineHelpText>
        <label>Completed Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <label>Deactivation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PI no longer accepting referrals</fullName>
                </value>
                <value>
                    <fullName>HCP referral funding maximum has been met</fullName>
                </value>
                <value>
                    <fullName>Quality of referrals does not meet expectations</fullName>
                </value>
                <value>
                    <fullName>At request of HCP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declining_Reason__c</fullName>
        <description>Why PI declined HCP</description>
        <label>Declining Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PI resource constraints</fullName>
                </value>
                <value>
                    <fullName>Quality of referrals</fullName>
                </value>
                <value>
                    <fullName>At request of HCP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divulge_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HCP/Physician For IMS physicians only Did physician or proxy opt in to divulge name of IMS physician to PI</description>
        <inlineHelpText>HCP/Physician For IMS physicians only Did physician or proxy opt in to divulge name of IMS physician to PI</inlineHelpText>
        <label>Divulge Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Divulged_Name__c</fullName>
        <description>HCP/Physician  For IMS physicians only If proxy opted in name role of proxy who opted in on behalf of IMS physician</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>HCP/Physician  For IMS physicians only If proxy opted in name role of proxy who opted in on behalf of IMS physician</inlineHelpText>
        <label>Divulged Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HCP Enrollments</relationshipLabel>
        <relationshipName>HCP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Contact__c</fullName>
        <label>HCP Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HCP&apos;s Study Sites</relationshipLabel>
        <relationshipName>HCP_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HCP_Enrollment_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>HCP Enrollment Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HCP_Name__c</fullName>
        <formula>HCP_Contact__r.FirstName + &apos; &apos; + HCP_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Referral_Source__c</fullName>
        <description>The source of referral for HCP</description>
        <inlineHelpText>The source of referral for HCP</inlineHelpText>
        <label>HCP Referral Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACoE Data Source</fullName>
                </value>
                <value>
                    <fullName>PI Recommended</fullName>
                </value>
                <value>
                    <fullName>HCP Self Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Virtual_Study_Site__c</fullName>
        <formula>Study_Site__r.Is_Virtual_Study_Site__c</formula>
        <label>Is Virtual Study Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_List_Date__c</fullName>
        <description>HCP Material listing with date time of when things are sent</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP Material listing with date time of when things are sent</inlineHelpText>
        <label>Material List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PI resource constraints</fullName>
                </value>
                <value>
                    <fullName>Quality of referrals</fullName>
                </value>
                <value>
                    <fullName>At request of HCP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orientation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_PI_Status__c</fullName>
        <formula>TEXT( Study_Site__r.Override_PI_Referral_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Override PI Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PI Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Count__c</fullName>
        <description>HCP Patient Density</description>
        <inlineHelpText>HCP Patient Density</inlineHelpText>
        <label>Patient Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Screened_Count__c</fullName>
        <label>Pre-Screened Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Screened_and_Did_Not_Qualify_Count__c</fullName>
        <label>Pre-Screened and Did Not Qualify Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Limit_Capacity__c</fullName>
        <description>HCP/Physician Referral limit capacity</description>
        <inlineHelpText>HCP/Physician Referral limit capacity</inlineHelpText>
        <label>Referral Limit Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_Study_URL__c</fullName>
        <formula>Study_Site__r.Clinical_Trial_Profile__r.Share_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Study URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Study_Site__r.Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_phone_number__c</fullName>
        <formula>Study_Site__r.Study_Site_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site phone number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>Captures reason for PI decline - mandatory to fill out if Status field is PI decline</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>HCP Status per clinical trial by PI</description>
        <inlineHelpText>HCP Status per clinical trial by PI</inlineHelpText>
        <label>HCP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation Sent</fullName>
                </value>
                <value>
                    <fullName>On Hold (Acceptance)</fullName>
                </value>
                <value>
                    <fullName>Declined (Acceptance)</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive (Admin)</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Activation Pending</fullName>
                </value>
                <value>
                    <fullName>Activation Pending Orientation</fullName>
                </value>
                <value>
                    <fullName>Declined (Approval)</fullName>
                </value>
                <value>
                    <fullName>On Hold (Approval)</fullName>
                </value>
                <value>
                    <fullName>Declined (Activation)</fullName>
                </value>
                <value>
                    <fullName>On Hold (Activation)</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Activated (Admin)</fullName>
                </value>
                <value>
                    <fullName>On Hold (Admin)</fullName>
                </value>
                <value>
                    <fullName>Declined (Admin)</fullName>
                </value>
                <value>
                    <fullName>Deactivated (Admin)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Name__c</fullName>
        <formula>Study_Site__r.Clinical_Trial_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_PI_Contact_OLD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site PI Contact_OLD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HCP Enrollments (PI Contact)</relationshipLabel>
        <relationshipName>HCP_Enrollments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Site_PI_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site PI Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HCP Enrollments (PI Contact)</relationshipLabel>
        <relationshipName>HCP_Enrollments_SS_PI_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Site_Status__c</fullName>
        <formula>TEXT(Study_Site__r.Override_Study_Site_Recruitment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Site Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hospital of rainbow</description>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Referring HCPs</relationshipLabel>
        <relationshipName>HCP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Study_Site__r.Clinical_Trial_Profile__c , Study_Site__r.Clinical_Trial_Profile__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Requires_Orientation__c</fullName>
        <formula>Study_Site__r.Clinical_Trial_Profile__r.Orientation_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Requires Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCP</fullName>
                    <default>true</default>
                    <label>HCP</label>
                </value>
                <value>
                    <fullName>HCP Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HCP Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HCP_Contact__c</columns>
        <columns>Study__c</columns>
        <columns>Status__c</columns>
        <columns>Study_Site__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HCP_Orientation_Status</fullName>
        <columns>NAME</columns>
        <columns>HCP_Contact__c</columns>
        <columns>Completed_Orientation__c</columns>
        <columns>Study_Site__c</columns>
        <columns>Study__c</columns>
        <columns>Override_PI_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Requires_Orientation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>HCP Orientation Status</label>
    </listViews>
    <listViews>
        <fullName>HCPs_In_Pending_Status_5_Days</fullName>
        <columns>Study__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>N_DAYS_AGO:5</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>HCPs In Pending Status &gt; 5 Days</label>
    </listViews>
    <listViews>
        <fullName>HCPs_by_status</fullName>
        <columns>NAME</columns>
        <columns>HCP_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Study_Name__c</columns>
        <columns>Study_Site_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>HCPs by status</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HCPE-{000000}</displayFormat>
        <label>HCP Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCP Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mandate_Status_Reason</fullName>
        <active>false</active>
        <description>Status reason necessary if Status is PI rejected.</description>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Rejected By PI&apos;), ISBLANK( Status_Reason__c ) )</errorConditionFormula>
        <errorMessage>Status Reason field cannot be blank when Status is Rejected by PI</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Orientation_Date</fullName>
        <active>true</active>
        <description>Orientation Date should be in future</description>
        <errorConditionFormula>Orientation_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Can&apos;t be a future date</errorMessage>
    </validationRules>
</CustomObject>